[package]
name = "dhallenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
change-case = "0.2.0"
clap = { version = "3.2.8", features = ["derive"] }
dotenvy = "0.15.1"
is-terminal = "0.3.0"
# nom = "7.1.1"
serde = { version = "1.0.137"}
serde_dhall = { version = "0.11.2", default-features = false }
